--- a/VitalzApp/app/src/main/res/layout/fragment_view_profile.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_view_profile.xml
@@ -141,6 +141,7 @@
                 android:gravity="start"
                 android:inputType="text"
                 android:padding="@dimen/dp_8"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="parent"
