changes and Graph

--- a/VitalzApp/app/src/main/res/layout/fragment_dashboard_heart_detail.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_dashboard_heart_detail.xml
@@ -55,6 +55,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_startDate_select"
             style="@style/dateBtn"
+            android:padding="@dimen/dp_8"
             android:layout_marginEnd="@dimen/dp_5"
             app:layout_constraintEnd_toStartOf="@+id/layout_endDate_select"
             app:layout_constraintHorizontal_bias="0.5"
@@ -81,12 +82,12 @@
             <TextView
                 android:id="@+id/tv_selected_start_date"
                 style="@style/viewSize"
-                android:layout_marginStart="@dimen/dp_5"
                 android:text="@string/sample_startDate"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_select_date"
                 app:layout_constraintStart_toEndOf="@+id/iv_select_date"
-                app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />
+                app:layout_constraintTop_toTopOf="@+id/iv_select_date" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -94,6 +95,7 @@
             android:id="@+id/layout_endDate_select"
             style="@style/dateBtn"
             android:layout_marginStart="@dimen/dp_5"
+            android:padding="@dimen/dp_8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/layout_startDate_select"
@@ -119,12 +121,12 @@
             <TextView
                 android:id="@+id/tv_selected_end_date"
                 style="@style/viewSize"
-                android:layout_marginStart="@dimen/dp_5"
                 android:text="@string/sample_endDate"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_selectEnd_date"
                 app:layout_constraintStart_toEndOf="@+id/iv_selectEnd_date"
-                app:layout_constraintTop_toBottomOf="@+id/tv_end_date" />
+                app:layout_constraintTop_toTopOf="@+id/iv_selectEnd_date" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -134,7 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_16"
             android:background="@drawable/bg_dark"
-            android:padding="@dimen/dp_5"
+            android:padding="@dimen/dp_8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_endDate_select">
