--- a/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
@@ -42,7 +42,7 @@
             android:id="@+id/et_user_name"
             style="@style/et_dashboard"
             android:layout_width="@dimen/dp_300"
-            android:text="VITALZ-1"
+            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />
 
@@ -62,7 +62,7 @@
             android:layout_width="@dimen/dp_300"
             android:inputType="textPassword"
             android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
-            android:text="12345"
+            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_password" />
 
