--- a/VitalzApp/app/src/main/res/layout/progress_bar_layout.xml
+++ b/VitalzApp/app/src/main/res/layout/progress_bar_layout.xml
@@ -4,10 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ProgressBar
+    <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/progressBar_text"
