--- a/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
@@ -15,13 +15,29 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/iv_vitalz_name"
-            style="@style/backBtn"
-            android:contentDescription="@string/back_btn"
-            android:src="@drawable/ic_vital_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/imageView_vitalz"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_30"
+            android:contentDescription="@string/vitalz_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_vitalz_logo" />
+
+        <TextView
+            android:id="@+id/tv_vitalz_health"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/vitalz_health"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView_vitalz"
+            app:layout_constraintStart_toEndOf="@+id/imageView_vitalz"
+            app:layout_constraintTop_toTopOf="@+id/imageView_vitalz" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
