--- a/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
@@ -9,7 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView_vitalz"
-        style="@style/viewSize"
+        android:layout_width="@dimen/dp_150"
+        android:layout_height="@dimen/dp_150"
         android:contentDescription="@string/vitalz_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -17,7 +18,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/vitalz_icon" />
+        app:srcCompat="@drawable/ic_vitalz_logo" />
+
+    <TextView
+        android:id="@+id/tv_vitalz_health"
+        style="@style/viewSize"
+        android:gravity="center"
+        android:text="@string/vitalz_health"
+        android:textSize="30sp"
+        android:layout_marginTop="@dimen/dp_8"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_vitalz"
+        app:layout_constraintStart_toStartOf="@+id/imageView_vitalz"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz" />
 
     <EditText
         android:id="@+id/et_mobile_number"
@@ -27,7 +41,7 @@
         android:hint="@string/enter_mobile_number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz"
+        app:layout_constraintTop_toBottomOf="@+id/tv_vitalz_health"
         tools:ignore="RtlSymmetry" />
 
     <TextView
