--- a/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
@@ -8,15 +8,29 @@
 
     <ImageView
         android:id="@+id/imageView_vitalz"
-        style="@style/viewSize"
+        android:layout_width="@dimen/dp_150"
+        android:layout_height="@dimen/dp_150"
         android:contentDescription="@string/vitalz_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@drawable/vitalz_icon" />
+        app:layout_constraintVertical_bias="0.25"
+        app:srcCompat="@drawable/ic_vitalz_logo" />
+
+    <TextView
+        android:id="@+id/tv_vitalz_health"
+        style="@style/viewSize"
+        android:gravity="center"
+        android:text="@string/vitalz_health"
+        android:textSize="30sp"
+        android:layout_marginTop="@dimen/dp_8"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_vitalz"
+        app:layout_constraintStart_toStartOf="@+id/imageView_vitalz"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_login"
@@ -26,7 +40,7 @@
         android:padding="@dimen/dp_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_vitalz">
+        app:layout_constraintTop_toBottomOf="@+id/tv_vitalz_health">
 
         <TextView
             android:id="@+id/tv_user_name"
