--- a/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_device_details.xml
@@ -33,8 +33,8 @@
 
         <ImageView
             android:id="@+id/imageView_battery"
-            android:layout_width="@dimen/dp_80"
-            android:layout_height="@dimen/dp_80"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
             android:contentDescription="@string/vitalz_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/tx_status"
             style="@style/textViewDevice"
             android:layout_marginTop="@dimen/dp_16"
-            android:text="@string/status"
+            android:text="@string/battery"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/tx_connection"
             app:layout_constraintStart_toEndOf="@+id/imageView_battery"
@@ -84,7 +84,7 @@
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/battery"
             style="@style/textViewDevice"
             android:layout_marginTop="@dimen/dp_16"
             android:hint="@string/fake_status"
@@ -103,9 +103,8 @@
             android:text=""
             android:textColor="@color/button_blue"
             android:textColorHint="@color/button_blue"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/tx_connection"
-            app:layout_constraintTop_toBottomOf="@+id/status" />
+            app:layout_constraintTop_toBottomOf="@+id/battery" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
