--- a/VitalzApp/app/src/main/res/values-night/themes.xml
+++ b/VitalzApp/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+    <style name="Theme.VitalzApp.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowDisablePreview">true</item>
+    </style>
     <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="android:windowDisablePreview">true</item>
