--- a/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
@@ -45,7 +45,6 @@
         android:id="@+id/layout_ble"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
@@ -63,7 +62,7 @@
             style="@style/dashboard_ble"
             android:hint="@string/fake_time_left"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/button_blue"
             app:layout_constraintStart_toEndOf="@+id/iv_remote_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,6 +75,7 @@
         <ImageView
             android:id="@+id/iv_connectivity_icon"
             style="@style/dashboard_ble"
+            android:visibility="gone"
             android:layout_marginEnd="@dimen/dp_20"
             android:contentDescription="@string/remote_icon"
             android:src="@drawable/ic_connectivity_icon"
