--- a/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_docnurse_login.xml
@@ -74,10 +74,19 @@
             android:id="@+id/et_password"
             style="@style/et_dashboard"
             android:layout_width="@dimen/dp_300"
-            android:inputType="textPassword"
-            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:text="12345"
+            android:inputType="textPassword"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_password" />
+
+        <ImageView
+            android:id="@+id/iv_password_visibility"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
+            android:layout_marginEnd="@dimen/dp_8"
+            android:src="@drawable/ic_baseline_visibility_off_24"
+            app:layout_constraintEnd_toEndOf="@+id/et_password"
             app:layout_constraintTop_toBottomOf="@+id/tv_password" />
 
         <Button
