--- a/VitalzApp/app/src/main/res/values/styles.xml
+++ b/VitalzApp/app/src/main/res/values/styles.xml
@@ -204,7 +204,7 @@
         <item name="android:layout_marginTop">@dimen/dp_24</item>
     </style>
 
-    <style name="DialogTheme" parent="Theme.AppCompat.Dialog.Alert">
+    <style name="DialogTheme" parent="ThemeOverlay.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/button_blue</item>
     </style>
 
