--- a/VitalzApp/app/src/main/res/layout/settings.xml
+++ b/VitalzApp/app/src/main/res/layout/settings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/vitalz"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@mipmap/vitalz">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/app_bar_layout"
@@ -47,85 +47,108 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
 
-        <ImageView
-            android:id="@+id/ic_update_profile"
-            style="@style/viewSize"
-            android:src="@drawable/ic_update_profile"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_update_profile"
-            style="@style/viewSize"
-            android:layout_marginStart="@dimen/dp_16"
-            android:text="Update Profile"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/ic_update_profile"
-            app:layout_constraintStart_toEndOf="@+id/ic_update_profile"
-            app:layout_constraintTop_toTopOf="@+id/ic_update_profile" />
-
-        <ImageView
-            android:id="@+id/ic_update_password"
-            style="@style/viewSize"
-            android:layout_marginTop="@dimen/dp_16"
-            android:src="@drawable/ic_change_password"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ic_update_profile" />
-
-        <TextView
-            android:id="@+id/textView"
-            style="@style/viewSize"
-            android:layout_marginStart="@dimen/dp_16"
-            android:text="Change Password"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/ic_update_password"
-            app:layout_constraintStart_toEndOf="@+id/ic_update_password"
-            app:layout_constraintTop_toTopOf="@+id/ic_update_password" />
-
-        <View
-            android:id="@+id/divider_profile"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_update_profile"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/dp_16"
-            android:background="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ic_update_password" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ic_update_profile"
+                style="@style/viewSize"
+                android:src="@drawable/ic_update_profile"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_update_profile"
+                style="@style/viewSize"
+                android:layout_marginStart="@dimen/dp_16"
+                android:text="Update Profile"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/ic_update_profile"
+                app:layout_constraintStart_toEndOf="@+id/ic_update_profile"
+                app:layout_constraintTop_toTopOf="@+id/ic_update_profile" />
+
+            <View
+                android:id="@+id/divider_profile"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/dp_5"
+                android:background="@color/button_grey"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ic_update_profile" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/iv_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_8"
+            android:src="@drawable/ic_notification_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_update_profile" />
 
         <TextView
-            android:id="@+id/tv_enable_fingerprint"
+            android:id="@+id/tv_push_notification"
             style="@style/viewSize"
-            android:layout_marginTop="@dimen/dp_16"
-            android:text="Enable Fingerprint"
+            android:layout_marginStart="@dimen/dp_16"
+            android:text="@string/push_notifications"
             android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider_profile"
-            app:layout_constraintVertical_chainStyle="spread" />
-
-        <Switch
-            android:id="@+id/fingerprint_switch"
-            style="@style/viewSize"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_enable_fingerprint"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_enable_fingerprint"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <TextView
-            android:id="@+id/textView2"
-            style="@style/viewSize"
-            android:layout_marginTop="@dimen/dp_16"
-            android:text="Push Notifications"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_enable_fingerprint" />
+            app:layout_constraintBottom_toBottomOf="@+id/iv_notification"
+            app:layout_constraintStart_toEndOf="@+id/iv_notification"
+            app:layout_constraintTop_toTopOf="@+id/iv_notification" />
 
         <Switch
             android:id="@+id/switch1"
             style="@style/viewSize"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_push_notification"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/tv_push_notification"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <View
+            android:id="@+id/divider_push_notification"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/dp_5"
+            android:background="@color/button_grey"
+            app:layout_constraintTop_toBottomOf="@+id/iv_notification"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_logout"
+            style="@style/viewSize"
+            android:layout_marginTop="@dimen/dp_8"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider_push_notification">
+
+            <ImageView
+                android:id="@+id/iv_logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_logout_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_enable_fingerprint"
+                style="@style/viewSize"
+                android:layout_marginStart="@dimen/dp_16"
+                android:text="@string/logout"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_logout"
+                app:layout_constraintStart_toEndOf="@+id/iv_logout"
+                app:layout_constraintTop_toTopOf="@+id/iv_logout" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
