--- a/VitalzApp/app/src/main/res/layout/fragment_single_paitent_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_single_paitent_dashboard.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/vitalz">
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/app_bar_layout"
@@ -68,7 +69,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <TextView
         android:id="@+id/tv_selected_patient"
         android:layout_width="wrap_content"
@@ -78,7 +78,6 @@
         android:text="@string/sample_patient_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@id/layout_dashboard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_ble"
         app:layout_constraintVertical_bias="0.0" />
@@ -154,6 +153,7 @@
             app:layout_constraintTop_toTopOf="@+id/display_respiratory_chart" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_dashboard"
@@ -262,7 +262,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_bp_count"
+                android:id="@+id/tv_bp_value"
                 style="@style/viewSize"
                 android:text="@string/sample_bp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -278,7 +278,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_bp_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_bp_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -302,7 +302,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_temperature_count"
+                android:id="@+id/tv_temperature_value"
                 style="@style/viewSize"
                 android:text="@string/sample_temp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -318,7 +318,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_temperature_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_temperature_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -342,7 +342,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_activity_count"
+                android:id="@+id/tv_activity_value"
                 style="@style/viewSize"
                 android:text="@string/sample_activity"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -358,7 +358,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_activity_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_activity_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -382,7 +382,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_posture_count"
+                android:id="@+id/tv_posture_value"
                 style="@style/viewSize"
                 android:text="@string/sample_posture"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -398,7 +398,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_posture_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_posture_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -421,7 +421,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_oxygen_saturation_count"
+                android:id="@+id/tv_oxygen_saturation_value"
                 style="@style/viewSize"
                 android:text="@string/sample_oxygen"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -437,7 +437,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_oxygen_saturation_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_oxygen_saturation_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -460,7 +460,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_weight_count"
+                android:id="@+id/tv_weight_value"
                 style="@style/viewSize"
                 android:text="@string/sample_weight"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -476,7 +476,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_weight_count" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_weight_value" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
