--- a/VitalzApp/app/src/main/res/values-night/themes.xml
+++ b/VitalzApp/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="android:windowDisablePreview">true</item>
         <item name="colorPrimary">@color/purple_200</item>
