--- a/VitalzApp/app/src/main/res/values/themes.xml
+++ b/VitalzApp/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <!--    <style name="Theme.VitalzApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">-->
     <!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
