--- a/VitalzApp/app/src/main/res/layout/fragment_multiple_patient_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_multiple_patient_dashboard.xml
@@ -52,6 +52,7 @@
         <ImageView
             android:id="@+id/iv_cancel_search_patient"
             style="@style/viewSize"
+            android:visibility="gone"
             android:src="@drawable/ic_baseline_cancel_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
