--- a/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
@@ -32,9 +32,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_hospital_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="@dimen/dp_20"
         android:background="@drawable/bg_curve"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
@@ -80,10 +81,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_hospital_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:padding="@dimen/dp_16"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/search_hospitals"
             tools:listitem="@layout/recycler_view_hospital_list" />
