--- a/VitalzApp/app/src/main/res/layout/fragment_notifications.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_notifications.xml
@@ -39,10 +39,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_notification_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/bg_curve"
         android:layout_margin="@dimen/dp_20"
         app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -51,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/dp_16"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/recycler_view_notifications_list"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
