--- a/VitalzApp/app/src/main/res/layout/fragment_multiple_patient_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_multiple_patient_dashboard.xml
@@ -33,12 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_12"
+        android:padding="@dimen/dp_16"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
-        <SearchView
+        <EditText
             android:id="@+id/et_search_patient"
             style="@style/search_et_box"
             android:hint="@string/search_patient"
